chore: daily development snapshot 2026-09-20